Text align issue and change link title
Changed the margin to fix the alignment issue with the questions, and
changed the link on result.html to “start over”

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ label {
     width: 20px;
     height: 20px;
     padding: 2px;
-    margin-right: 10px;
+	margin-right: -20px;  /* I added margin right -20px to account for the indented quetions. This should fix the problem across the board.*/
     text-align: center;
 }
 
